--- a/segundoBimestre/front-end-I/aula7-modelodecaixa/style.css
+++ b/segundoBimestre/front-end-I/aula7-modelodecaixa/style.css
@@ -15,6 +15,38 @@ Escolha uma cor bem bacana.
 Centralize todos os itens com text-align: center; para que os itens do banner fiquem centralizados.
 Coloque um padding vertical no banner para centralizar os itens verticalmente.*/
 
-banner {
-    background-image: url("https://cdn.dribbble.com/users/3237629/screenshots/12922258/artboard_1_copy_7_4x.jpg");
+* {
+    margin:0px;
+    padding: 0px;
+    box-sizing: border-box;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+body {
+    background: url("https://www.zestyginger.com/wp-content/uploads/2018/03/plant-banner.jpg") no-repeat;
+
+}
+
+.banner {
+    text-align: center;
+    justify-content: center;
+    background-color: rgb(59, 95, 5);
+    border-radius: 15px;
+    opacity: 0.9;
+    padding:30px 400px;
+    margin: 50px;
+
+}
+
+h1, h2, p {
+   
+    color:honeydew;
+    text-align: center;
+    margin-bottom: 20px;
+    padding: 5px;
+}
+
+#saibamais{
+    padding: 5px;
+
 }
