--- a/cadastro.css
+++ b/cadastro.css
@@ -201,3 +201,11 @@ button {
   border-radius: 12px;
 
 }
+
+.zap img {
+  position: fixed;
+  bottom: 10px;
+  right: 40px;
+  width: 50px;
+  height: 50px;
+}
