--- a/style.css
+++ b/style.css
@@ -207,3 +207,11 @@ card {
     .card h1 {
         font-size: 18px;
     }
+
+    .zap img {
+        position: fixed;
+        bottom: 10px;
+        right: 40px;
+        width: 50px;
+        height: 50px;
+      }
