--- a/style.css
+++ b/style.css
@@ -14,7 +14,9 @@ body{
     font-family: 'Crimson Text', serif;
     }
 
-
+.container {
+    text-align: center;
+}
 
 .main-header {
     display: flex;
@@ -119,7 +121,6 @@ main h1{
     font-size: 60px;
     color: #1161DE;
     text-align: center;
-    background-color: #e5e5e5c2;
     padding: 20px 0;
     margin-bottom: 15px;
 
@@ -136,15 +137,15 @@ p{
     }
     
 .videoWinx{
-     margin: 0 300px 24px 300px;
+     /* margin: 0 300px 24px 300px; */
     /* width:640px;
     height:360px;
-    text-decoration: none; */ 
+     */ 
     width: 1280px;
     height: 720px;
     margin-top: 40px;
     text-decoration: none;
-    text-align: center;
+    border-radius: 24px;
    
 
 }
@@ -213,12 +214,16 @@ margin-top: 24px;
     
     .card img {
         width: 400px;
+        height: 250px;
+        border-radius: 12px;
 
               
     }
     
     .card h1 {
-        font-size: 18px;
+        font-size: 24px;
+        border-radius: 12px;
+        background-color: #e5e5e5c2;
     }
 
     .zap img {
